--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^11.10.0",
     "parcel": "^2.16.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
